Revisión masiva de notas

--- a/React.js Next.js/04 Página 404.md
+++ b/React.js Next.js/04 Página 404.md
@@ -1,5 +1,5 @@
 # 404
-Es posible contar con una página 404 creando en `pages` el archivo `404.js` y este componente se mostrará en pantalla cada vez que ingresemos a una url que no tenga una página asociada nos mostrará este componente:
+Es posible contar con una página 404 creando en `pages` el archivo `404.js` y este componente se mostrará en pantalla cada vez que ingresemos a una url que no tenga una página asociada:
 
 ```jsx
 import React from 'react';
