--- a/GraphQL/2 Intro 2024.md
+++ b/GraphQL/2 Intro 2024.md
@@ -2,7 +2,7 @@
 
 
 
-Haremos un fetch server side para mostrar una serie de cards.
+UHaremos un fetch server side para mostrar una serie de cards con información sobre learning tracks. Un track es un conjunto de módulos que enseña sobre un tema específico. A su vez cada track tendrá un autor y ese mismo autor podrá tener a su cargo la creación de varios tracks.
 
 
 
@@ -20,3 +20,216 @@ Esta implemenetación nos permitirá a los equipos de FE y BE trabajar de manera
 
 
 ## Definir schema
+
+Lo primero que debemos hacer es pensar qué datos necesitamos para nuestra funcionalidad. En nuestro caso para cada card vamos a querer mostrar:
+
+* `title`
+* `thumbnail`
+* `length`
+* `module_count`
+* `author_name`
+* `author_picture`
+
+
+
+Si bien podríamos crear un único tipo y colocar en el todos los campos, esto podría ocasionar duplicación de datos (ya que un autor podría crear mas de un track). Es por eso  que utilizaremos dos tipos `track` y `author`.
+
+Podemos pensar en los datos de la aplicación como una colección de objetos (learning tracks y autores). Nuestra data puede ser representada mediante nodos (representando objetos) y aristas (representando relaciones entre estos objetos).
+
+<img src="2 Intro 2024.assets/LO_02_v2.00_04_53_09.Still002_g8xow6_bbgabz.jpg" alt="A doodle of a graph, consisting of nodes with relationships to other nodes" style="zoom: 33%;" />
+
+El schema es el contrato entre el servidor y el cliente que define lo que la GraphQL API puede hacer y cómo deben ser solicitados o modificados los datos a la vez que oculta detalles de la implementación del servicio.
+
+
+
+##  Schema Definition Language (SDL)
+
+Un schema es una colección de object types que contienen fields, cada campo o field tiene un tipo o type que puede ser escalar (`Int`, `Float`, `String`, `Boolean`, `ID`) o un objeto que contiene campos propios.
+
+Podemos declarar un type utilizando la keyword `type` utilizando PascalCase
+
+```
+type SpaceCat {
+  age: Int!
+  missions: [Mission]
+}
+```
+
+* Los nombres de los campos los declaramos utilizando camelCase.
+
+* Con los corchetes indicamos que se trata de una lista.
+* Los campos no se separan por comas.
+* Con un signo de exclamación después del tipo indicamos que no puede ser nulo ese campo.
+
+
+
+## Documentación
+
+Es una buena práctica documentar los schemas, esto no sólo simplificará nuestro trabajo y el de nuestros colegas sino que podrá integrarse con herramientas como Apollo Studio Explorer para tener noción de lo que puede realizarse con la API.
+
+Podemos documentar tanto types como campos utilizando comillas dobles directamente en la línea arriba de ellos:
+
+```
+"I'm a regular description"
+```
+
+Si queremos utilizar comentarios mas largos y multi-línea debemos utilizar triple doble comillas:
+
+```
+"""
+I'm a block description
+with a line break
+"""
+```
+
+
+
+# Servidor
+
+Creamos un directorio `server` y luego inicializamos el proyecto de node con:
+
+```
+npm init -y
+```
+
+
+
+## Dependencias
+
+* `@apollo/server` proporciona una implementación completa de un servidor de graphql
+* `graphql` proporciona la lógica para parsear y validar las queries de graphql.
+* `graphql-tag` proporciona utilidades para parsear queries de graphql: `gql` es una template literal tag.
+
+Creamos el archivo `schema.js`
+
+
+
+```
+npm install @apollo/server graphql graphql-tag
+```
+
+
+
+## Schema
+
+Creamos un directorio `src` y dentro de el un archivo `schema.js`
+
+
+
+```js
+const gql = require('graphql-tag');
+```
+
+
+
+`gql` es un template string tag para envolver strings de GraphQL y convertirlos en la forma que Apollo espera y a su vez posibilitar el sintax highlighting.
+
+
+
+```js
+const gql = require('graphql-tag');
+
+const typeDefs = gql`
+
+`;
+
+module.exports = typeDefs.
+```
+
+
+
+Otra forma de escribir lo mismo utilizando imports.
+
+```js
+import gql from "graphql-tag";
+ 
+export const typeDefs = gql`
+`;
+```
+
+
+
+Crearemos los types `Track` y `Author`. 
+
+```js
+"A track is a group of Modules that teaches about a specific topic"
+type Track {
+  id: ID!
+  title: String!
+  author: Author!
+  thumbnail: String
+  length: Int
+  modulesCount: Int
+}
+```
+
+
+
+```js
+"Author of a complete Track or a Module"
+type Author {
+  id: ID!
+  name: String!
+  photo: String
+}
+```
+
+
+
+Luego queremos crear el `type Query` con el campo `tracksForHome` que devolverá un listado con todos los tracks disponibles.
+
+```js
+type Query {
+  "Get tracks array for homepage grid"
+  tracksForHome: [Track!]!
+}
+```
+
+
+
+El archivo completo nos queda:
+
+```js
+import gql from "graphql-tag";
+ 
+export const typeDefs = gql`
+  type Query {
+    "Get tracks array for homepage grid"
+    tracksForHome: [Track!]!
+  }
+   
+  "A track is a group of Modules that teaches about a specific topic"
+  type Track {
+    id: ID!
+    "The track's title"
+    title: String!
+    "The track's main author"
+    author: Author!
+    "The track's main illustration to display in track card or track page detail"
+    thumbnail: String
+    "The track's approximate length to complete, in minutes"
+    length: Int
+    "The number of modules this track contains"
+    modulesCount: Int
+  }
+   
+  "Author of a complete Track"
+  type Author {
+    id: ID!
+    "Author's first and last name"
+    name: String!
+    "Author's profile picture url"
+    photo: String
+  }
+`;
+```
+
+
+
+El objetivo del backend es crear un servidor de GraphQL debemos procesar las GraphQL queries del cliente, validarlas contra el schema,  popular los campos del schema solicitados con la data mockeada y retornar esto como respuesta. Si bien podemos hacerlo manualmente, Apollo Server acelera este proceso y lo hace listo para producción. 
+
+
+
+## Creación server
+
+En `src/index.js`
