mocking data with apollo utilities

--- a/GraphQL/2 Intro 2024.md
+++ b/GraphQL/2 Intro 2024.md
@@ -2,7 +2,7 @@
 
 
 
-UHaremos un fetch server side para mostrar una serie de cards con información sobre learning tracks. Un track es un conjunto de módulos que enseña sobre un tema específico. A su vez cada track tendrá un autor y ese mismo autor podrá tener a su cargo la creación de varios tracks.
+Haremos un fetch server side para mostrar una serie de cards con información sobre learning tracks. Un track es un conjunto de módulos que enseña sobre un tema específico. A su vez cada track tendrá un autor y ese mismo autor podrá tener a su cargo la creación de varios tracks.
 
 
 
@@ -107,6 +107,48 @@ Creamos el archivo `schema.js`
 ```
 npm install @apollo/server graphql graphql-tag
 ```
+
+
+
+## Dependencias Desarrollo
+
+```
+npm i -D typescript ts-node-dev nodemon
+```
+
+
+
+## Setup TypeScript
+
+Creación de `tsconfig.json` basándonos en el repo de Apollo
+
+```
+{
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
+    "target": "es2020",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "module": "commonjs"
+  },
+  "include": ["src"]
+}
+```
+
+
+
+En `package.json` agregamos los scripts que utilizaremos:
+
+```json
+"scripts": {
+    "compile": "tsc",
+  	"dev": "ts-node-dev --respawn ./src/index.ts",
+  	"start": "npm run compile && nodemon ./dist/index.js"
+}
+```
+
+> Basado en el [repositorio de apollographql](https://github.com/apollographql/odyssey-lift-off-part1/blob/typescript/server/package.json)
 
 
 
@@ -232,4 +274,142 @@ El objetivo del backend es crear un servidor de GraphQL debemos procesar las Gra
 
 ## Creación server
 
-En `src/index.js`
+Creamos el archivo `index.ts` en `src`.
+
+```js
+import { ApolloServer } from "@apollo/server";
+import { startStandaloneServer } from "@apollo/server/standalone";
+import { typeDefs } from "./schema";
+
+async function startApolloServer() {
+  const server = new ApolloServer({ typeDefs });
+  const { url } = await startStandaloneServer(server);
+
+  console.log(`
+    🚀  Server is running!
+    📭  Query at ${url}
+  `);
+}
+
+startApolloServer();
+```
+
+:rotating_light: Observar que importamos `schema` sin el `.ts` porque el código compilado importará un archivo `.js` y como actualmente no tenemos ese `schema.js` omitimos la extensión y TypeScript se encargará de hacerlo cuando compile el código.
+
+
+
+Ejecutamos ahora:
+
+```
+npm run dev
+```
+
+Hasta el momento no tenemos conectado nuestro servidor a ninguna fuente de datos, pero contamos con herramientas que nos permiten testear las queries y obtener una respuesta válida.
+
+
+
+## Mocking data
+
+Es posible testear las queries aun sin contar con datos reales utilizando data mockeada y los type definitions creados anteriormente.
+
+Para acceder a estas herramientas debemos instalar dos paquetes:
+
+```
+npm install @graphql-tools/mock @graphql-tools/schema
+```
+
+
+
+Lo primero que hacemos es trabajar con estos dos paquetes importando `addMocksToSchema` y `makeExecutableSchema`
+
+```
+import { addMocksToSchema } from "@graphql-tools/mock";
+import { makeExecutableSchema } from "@graphql-tools/schema";
+```
+
+
+
+Luego  modificamos la inicialización de `ApolloServer`, que hasta ahora era:
+
+```
+const server = new ApolloServer({ typeDefs });
+```
+
+
+
+Lo convertimos en:
+
+```
+const server = new ApolloServer({
+  schema: addMocksToSchema({
+    schema: makeExecutableSchema({ typeDefs }),
+  }),
+});
+```
+
+Con este código generamos un schema ejecutable basado en `typeDefs` y le indicamos a Apollo que debe popular cada campo con un placeholder (por ejemplo en el caso de String entregará Hello World).
+
+Si ahora ingresamos a Apollo Explorer en http://localhost:4000/ podremos usar Apollo Sandbox que es un modo para desarrollo en el cual podemos usar los cambios locales antes de deployarlos. y cargamos:
+
+```
+query ExampleQuery {
+  tracksForHome {
+    title
+  }
+}
+```
+
+Nos devolverá data mockeada acorde a lo esperado.
+
+
+
+Para ir un paso mas allá creamos el objeto `mocks` para obtener datos realistas para el título de un track o la URL de la foto de un autor.
+
+```js
+const mocks = {
+  Track: () => ({
+    id: () => "track_01",
+    title: () => "Astro Kitty, Space Explorer",
+    author: () => {
+      return {
+        name: "Grumpy Cat",
+        photo:
+          "https://res.cloudinary.com/dety84pbu/image/upload/v1606816219/kitty-veyron-sm_mctf3c.jpg",
+      };
+    },
+    thumbnail: () =>
+      "https://res.cloudinary.com/dety84pbu/image/upload/v1598465568/nebula_cat_djkt9r.jpg",
+    length: () => 1210,
+    modulesCount: () => 6,
+  }),
+};
+```
+
+
+
+Luego se lo pasamos al constructor `ApolloServer`
+
+```js
+const server = new ApolloServer({
+  schema: addMocksToSchema({
+    schema: makeExecutableSchema({ typeDefs }),
+    mocks,
+  }),
+});
+```
+
+
+
+Luego al ingresar a Apollo Server en el navegador obtendremos exactamente dos resultados con la misma data. Si queremos obtener más debemos modificar `Query.tracksForHome` en `mocks`.
+
+```js
+const mocks = {
+  Query: () => ({
+    tracksForHome: () => [...new Array(6)],
+  }),
+  Track: () => ({
+    ...
+  }),
+};
+```
+
