--- a/GraphQL/2 Intro 2024.md
+++ b/GraphQL/2 Intro 2024.md
@@ -2,26 +2,26 @@
 
 
 
-Haremos un fetch server side para mostrar una serie de cards con informaci贸n sobre learning tracks. Un track es un conjunto de m贸dulos que ense帽a sobre un tema espec铆fico. A su vez cada track tendr谩 un autor y ese mismo autor podr谩 tener a su cargo la creaci贸n de varios tracks.
+Haremos un fetch server side para mostrar una serie de cards con información sobre learning tracks. Un track es un conjunto de módulos que ense?a sobre un tema específico. A su vez cada track tendrá un autor y ese mismo autor podrá tener a su cargo la creación de varios tracks.
 
 
 
 ## Schema-first
 
-La implementaci贸n schema-first consta de los siguientes pasos:
+La implementación schema-first consta de los siguientes pasos:
 
 1. Definir el schema. Determinar los datos necesarios para la funcionalidad.
-2. Implementar el Backend con una GraphQL API utilizando Apollo Server y hacer el fetch los datos (que en principio ser谩n mockedos y luego conectarla a una fuente de datos REST).
+2. Implementar el Backend con una GraphQL API utilizando Apollo Server y hacer el fetch los datos (que en principio serán mockedos y luego conectarla a una fuente de datos REST).
 
 3) Implementar el frontend. Consumir los datos de la GraphQL API para renderizar las vistas.
 
-Esta implemenetaci贸n nos permitir谩 a los equipos de FE y BE trabajar de manera simult谩nea con lo cual reduciremos el tiempo de desarrollo. Una vez definido el schema los de FE podr谩n comenzar a trabajar con la data mockeada mientras los de BE desarrollan la GraphQL API conforme a ese mismo schema.
+Esta implemenetación nos permitirá a los equipos de FE y BE trabajar de manera simultánea con lo cual reduciremos el tiempo de desarrollo. Una vez definido el schema los de FE podrán comenzar a trabajar con la data mockeada mientras los de BE desarrollan la GraphQL API conforme a ese mismo schema.
 
 
 
 ## Definir schema
 
-Lo primero que debemos hacer es pensar qu茅 datos necesitamos para nuestra funcionalidad. En nuestro caso para cada card vamos a querer mostrar:
+Lo primero que debemos hacer es pensar qué datos necesitamos para nuestra funcionalidad. En nuestro caso para cada card vamos a querer mostrar:
 
 * `title`
 * `thumbnail`
@@ -32,19 +32,19 @@ Lo primero que debemos hacer es pensar qu茅 datos necesitamos para nuestra funci
 
 
 
-Si bien podr铆amos crear un 煤nico tipo y colocar en el todos los campos, esto podr铆a ocasionar duplicaci贸n de datos (ya que un autor podr铆a crear mas de un track). Es por eso  que utilizaremos dos tipos `track` y `author`.
+Si bien podríamos crear un 煤nico tipo y colocar en el todos los campos, esto podría ocasionar duplicación de datos (ya que un autor podría crear mas de un track). Es por eso  que utilizaremos dos tipos `track` y `author`.
 
-Podemos pensar en los datos de la aplicaci贸n como una colecci贸n de objetos (learning tracks y autores). Nuestra data puede ser representada mediante nodos (representando objetos) y aristas (representando relaciones entre estos objetos).
+Podemos pensar en los datos de la aplicación como una colección de objetos (learning tracks y autores). Nuestra data puede ser representada mediante nodos (representando objetos) y aristas (representando relaciones entre estos objetos).
 
 <img src="2 Intro 2024.assets/LO_02_v2.00_04_53_09.Still002_g8xow6_bbgabz.jpg" alt="A doodle of a graph, consisting of nodes with relationships to other nodes" style="zoom: 33%;" />
 
-El schema es el contrato entre el servidor y el cliente que define lo que la GraphQL API puede hacer y c贸mo deben ser solicitados o modificados los datos a la vez que oculta detalles de la implementaci贸n del servicio.
+El schema es el contrato entre el servidor y el cliente que define lo que la GraphQL API puede hacer y cómo deben ser solicitados o modificados los datos a la vez que oculta detalles de la implementación del servicio.
 
 
 
 ##  Schema Definition Language (SDL)
 
-Un schema es una colecci贸n de object types que contienen fields, cada campo o field tiene un tipo o type que puede ser escalar (`Int`, `Float`, `String`, `Boolean`, `ID`) o un objeto que contiene campos propios.
+Un schema es una colección de object types que contienen fields, cada campo o field tiene un tipo o type que puede ser escalar (`Int`, `Float`, `String`, `Boolean`, `ID`) o un objeto que contiene campos propios.
 
 Podemos declarar un type utilizando la keyword `type` utilizando PascalCase
 
@@ -59,21 +59,21 @@ type SpaceCat {
 
 * Con los corchetes indicamos que se trata de una lista.
 * Los campos no se separan por comas.
-* Con un signo de exclamaci贸n despu茅s del tipo indicamos que no puede ser nulo ese campo.
+* Con un signo de exclamación después del tipo indicamos que no puede ser nulo ese campo.
 
 
 
-## Documentaci贸n
+## Documentación
 
-Es una buena pr谩ctica documentar los schemas, esto no s贸lo simplificar谩 nuestro trabajo y el de nuestros colegas sino que podr谩 integrarse con herramientas como Apollo Studio Explorer para tener noci贸n de lo que puede realizarse con la API.
+Es una buena práctica documentar los schemas, esto no sólo simplificará nuestro trabajo y el de nuestros colegas sino que podrá integrarse con herramientas como Apollo Studio Explorer para tener noción de lo que puede realizarse con la API.
 
-Podemos documentar tanto types como campos utilizando comillas dobles directamente en la l铆nea arriba de ellos:
+Podemos documentar tanto types como campos utilizando comillas dobles directamente en la línea arriba de ellos:
 
 ```
 "I'm a regular description"
 ```
 
-Si queremos utilizar comentarios mas largos y multi-l铆nea debemos utilizar triple doble comillas:
+Si queremos utilizar comentarios mas largos y multi-línea debemos utilizar triple doble comillas:
 
 ```
 """
@@ -96,8 +96,8 @@ npm init -y
 
 ## Dependencias
 
-* `@apollo/server` proporciona una implementaci贸n completa de un servidor de graphql
-* `graphql` proporciona la l贸gica para parsear y validar las queries de graphql.
+* `@apollo/server` proporciona una implementación completa de un servidor de graphql
+* `graphql` proporciona la lógica para parsear y validar las queries de graphql.
 * `graphql-tag` proporciona utilidades para parsear queries de graphql: `gql` es una template literal tag.
 
 Creamos el archivo `schema.js`
@@ -120,7 +120,7 @@ npm i -D typescript ts-node-dev nodemon
 
 ## Setup TypeScript
 
-Creaci贸n de `tsconfig.json` bas谩ndonos en el repo de Apollo
+Creación de `tsconfig.json` basándonos en el repo de Apollo
 
 ```
 {
@@ -218,7 +218,7 @@ type Author {
 
 
 
-Luego queremos crear el `type Query` con el campo `tracksForHome` que devolver谩 un listado con todos los tracks disponibles.
+Luego queremos crear el `type Query` con el campo `tracksForHome` que devolverá un listado con todos los tracks disponibles.
 
 ```js
 type Query {
@@ -268,11 +268,11 @@ export const typeDefs = gql`
 
 
 
-El objetivo del backend es crear un servidor de GraphQL debemos procesar las GraphQL queries del cliente, validarlas contra el schema,  popular los campos del schema solicitados con la data mockeada y retornar esto como respuesta. Si bien podemos hacerlo manualmente, Apollo Server acelera este proceso y lo hace listo para producci贸n. 
+El objetivo del backend es crear un servidor de GraphQL debemos procesar las GraphQL queries del cliente, validarlas contra el schema,  popular los campos del schema solicitados con la data mockeada y retornar esto como respuesta. Si bien podemos hacerlo manualmente, Apollo Server acelera este proceso y lo hace listo para producción. 
 
 
 
-## Creaci贸n server
+## Creación server
 
 Creamos el archivo `index.ts` en `src`.
 
@@ -294,7 +294,7 @@ async function startApolloServer() {
 startApolloServer();
 ```
 
-:rotating_light: Observar que importamos `schema` sin el `.ts` porque el c贸digo compilado importar谩 un archivo `.js` y como actualmente no tenemos ese `schema.js` omitimos la extensi贸n y TypeScript se encargar谩 de hacerlo cuando compile el c贸digo.
+:rotating_light: Observar que importamos `schema` sin el `.ts` porque el código compilado importará un archivo `.js` y como actualmente no tenemos ese `schema.js` omitimos la extensión y TypeScript se encargará de hacerlo cuando compile el código.
 
 
 
@@ -304,7 +304,7 @@ Ejecutamos ahora:
 npm run dev
 ```
 
-Hasta el momento no tenemos conectado nuestro servidor a ninguna fuente de datos, pero contamos con herramientas que nos permiten testear las queries y obtener una respuesta v谩lida.
+Hasta el momento no tenemos conectado nuestro servidor a ninguna fuente de datos, pero contamos con herramientas que nos permiten testear las queries y obtener una respuesta válida.
 
 
 
@@ -329,7 +329,7 @@ import { makeExecutableSchema } from "@graphql-tools/schema";
 
 
 
-Luego  modificamos la inicializaci贸n de `ApolloServer`, que hasta ahora era:
+Luego  modificamos la inicialización de `ApolloServer`, que hasta ahora era:
 
 ```
 const server = new ApolloServer({ typeDefs });
@@ -347,7 +347,7 @@ const server = new ApolloServer({
 });
 ```
 
-Con este c贸digo generamos un schema ejecutable basado en `typeDefs` y le indicamos a Apollo que debe popular cada campo con un placeholder (por ejemplo en el caso de String entregar谩 Hello World).
+Con este código generamos un schema ejecutable basado en `typeDefs` y le indicamos a Apollo que debe popular cada campo con un placeholder (por ejemplo en el caso de String entregará Hello World).
 
 Si ahora ingresamos a Apollo Explorer en http://localhost:4000/ podremos usar Apollo Sandbox que es un modo para desarrollo en el cual podemos usar los cambios locales antes de deployarlos. y cargamos:
 
@@ -359,11 +359,11 @@ query ExampleQuery {
 }
 ```
 
-Nos devolver谩 data mockeada acorde a lo esperado.
+Nos devolverá data mockeada acorde a lo esperado.
 
 
 
-Para ir un paso mas all谩 creamos el objeto `mocks` para obtener datos realistas para el t铆tulo de un track o la URL de la foto de un autor.
+Para ir un paso mas allá creamos el objeto `mocks` para obtener datos realistas para el título de un track o la URL de la foto de un autor.
 
 ```js
 const mocks = {
@@ -400,7 +400,7 @@ const server = new ApolloServer({
 
 
 
-Luego al ingresar a Apollo Server en el navegador obtendremos exactamente dos resultados con la misma data. Si queremos obtener m谩s debemos modificar `Query.tracksForHome` en `mocks`.
+Luego al ingresar a Apollo Server en el navegador obtendremos exactamente dos resultados con la misma data. Si queremos obtener más debemos modificar `Query.tracksForHome` en `mocks`.
 
 ```js
 const mocks = {
@@ -411,5 +411,96 @@ const mocks = {
     ...
   }),
 };
+```
+
+
+
+
+
+# Cliente
+
+
+
+## Dependencias
+
+* `graphql`: contiene la lógica para parsear las queries de GraphQL.
+* `@apollo/client`: contiene todo lo necesario para construir el cliente (in-memory cache, local state management, error handling, etc)
+
+```
+npm install graphql @apollo/client
+```
+
+
+
+ let's import the three symbols we need from the `@apollo/client` package in `src/index.tsx`:
+
+```js
+import { ApolloClient, InMemoryCache, ApolloProvider } from "@apollo/client";
+```
+
+
+
+```js
+const client = new ApolloClient({
+  uri: "http://localhost:4000",
+  cache: new InMemoryCache(),
+});
+```
+
+
+
+* Como `uri` debemos poner el endpoint del servidor GraphQL. 
+* Con el `cache: new InMemoryCache()` nos aseguramos que Apollo Client guarde el resultado de las peticiones GraphQL. Con esto mejoraremos y haremos mas veloz la UX ya que podremos responder a peticiones por los mimos datos sin enviar nuevas peticiones de red innecesarias al servidor.
+
+
+
+```jsx
+ReactDOM.render(
+  <ApolloProvider client={client}>
+    <GlobalStyles />
+    <Pages />
+  </ApolloProvider>,
+  document.getElementById("root")
+);
+```
+
+
+
+* Con `ApolloProvider` logramos que todas las `pages`, `containers` y `components` tengan acceso a la instancia de Apollo Client `client` utilizando hooks gracias a Context API.
+
+
+
+## Generating types
+
+Generación de tipos: https://www.apollographql.com/tutorials/lift-off-part1/09-codegen
+
+
+
+## Query
+
+```ts
+import { gql } from "../__generated__/";
+```
+
+
+
+```js
+/** TRACKS query to retrieve all tracks */
+const TRACKS = gql(`
+  query GetTracks {
+    tracksForHome {
+      id
+      title
+      thumbnail
+      length
+      modulesCount
+      author {
+        id
+        name
+        photo
+      }
+    }
+  }
+`);
 ```
 
